# assetkit-blender

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE.md  README.md  blender_manifest.toml  prepare_addon_verison.sh
.github/: FUNDING.yml
.github/workflows/: extension-package.yml
LICENSES/: Apache-2.0.txt
assetio_blender/: __init__.py  assetkit.py  operators.py  preferences.py
assetkit_blender/: __init__.py  assetkit.py  enums.py  hud.py  importer.py  load_options.py  operators.py  preferences.py
assetkit_blender/exp/: __init__.py  animation.py  exporter.py  images.py  materials.py  operators.py
src/native/: assetkit_module.c  mem.c  mem.h
src/native/common/: types.inc
src/native/exp/: anim_channel.inc  api.inc  curve.inc  doc_anim_skin.inc  export.inc  fast_mesh.inc  material.inc  mesh_core.inc  pixel_pack.inc  scene_payload.inc
src/native/imp/: accessor_attr.inc  api.inc  common_options.inc  import.inc  material_texture.inc  mesh_optimize.inc  py_pack.inc  scene_extract.inc  skin_anim.inc
tools/: benchmark_review_imports.sh  blender_animation_roundtrip_check.py  blender_export_benchmark.py  blender_gltf_export_options_check.py  blender_import_benchmark.py  blender_import_compare.py  blender_mesh_reuse_check.py  blender_ply_export_check.py  blender_stl_export_check.py  package_extension.py  prepare_addon_version.sh  release_extension.py
